--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <button class="empty-cart">Esvaziar carrinho</button>
+        <div class="price">
+          Total:
+          <span class="total-price"></span>
+        </div>
         <ol class="cart__items"></ol>
       </section>
     </section>
