--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <section class="cart">
       <article>
         <span class="cart__title">Carrinho de compras</span>
+        <input type="text" id="search" placeholder="Digite sua pesquisa e pressione enter">
         <button class="empty-cart">Esvaziar carrinho</button>
         <div class="price">
-          <div>Total</div>
-          $
+          <div class="price-article">Itens</div>
+          <span class="total-qtd"></span>
+          <div class="price-article">Total</div>
           <span class="total-price"></span>
         </div>
       </article>
