fix error literal

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="animations.css">
   <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="./ico.png" type="image/x-icon">
 </head>
 
 <body>
@@ -16,13 +17,16 @@
 
     <section class="cart">
       <article>
-        <span class="cart__title">Carrinho de compras</span>
+        <span class="cart__title">
+          <i>Carrinho de compras</i>
+          <div></div>
+        </span>
         <input type="text" id="search" placeholder="Digite sua pesquisa e pressione enter">
         <button class="empty-cart">Esvaziar carrinho</button>
         <div class="price">
           <div class="price-article">Itens</div>
           <span class="total-qtd"></span>
-          <div class="price-article">Total</div>
+          <div class="price-article">Total $</div>
           <span class="total-price"></span>
         </div>
       </article>
